# magnetic-control-KUKA-iiwa14

./: README.md  frames_2025-04-29_14.23.13.gv  frames_2025-05-08_15.16.11.gv  frames_2025-05-08_15.27.34.gv  frames_2025-05-20_16.19.24.gv  launch_params_4a5powae  launch_params_8_hpompq  launch_params_f5yf_vbc  launch_params_n64vhbwv  launch_params_sawahmwn  launch_params_u1frly9l  launch_params_vk3u4f2t  launch_params_y5vf84en  wget-log
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.sh
src/install/command_control/lib/command_control/: command_publisher2
src/install/command_control/share/command_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/fri_client_sdk/share/fri_client_sdk/: package.sh
src/install/iiwa14_moveit_config/share/iiwa14_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  (+3 more)
src/lbr_gazebo_models/: CMakeLists.txt  package.xml
src/lbr_gazebo_models/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/lbr_gazebo_models/log/: latest_build
src/lbr_gazebo_models/models/magnetic_capsule/: model.config  model.sdf
src/lbr_gazebo_models/worlds/: capsule_world.sdf  debug.world  test_capsule.world
src/log/: latest_build
src/my_package/: CMakeLists.txt  magnetic_field_plugin.xml
src/my_package/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/my_package/install/my_package/share/ament_index/resource_index/package_run_dependencies/: my_package
src/my_package/install/my_package/share/ament_index/resource_index/parent_prefix_path/: my_package
src/my_package/install/my_package/share/my_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/my_package/install/my_package/share/my_package/cmake/: my_packageConfig-version.cmake  my_packageConfig.cmake
src/my_package/install/my_package/share/my_package/environment/: ament_prefix_path.dsv  path.dsv
src/my_package/launch/: gazebo_complete.launch.py  gazebo_for_hardware.launch.py  gazebo_hw_robot.launch.py  gazebo_move.launch.py  gazebo_simu_robot.launch.py  hardware_for_gazebo.launch.py  hardware_gazebo_joint_control.launch.py  move_group_hw.launch.py  my.launch.py  my_launch2.launch.py  my_launch3.launch.py  my_launch_rviz.launch.py  my_position.launch.py  my_reset.launch.py  my_robot_info.launch.py
src/my_package/log/: latest_build
src/my_package/src/: buoyancy_plugin.cpp  command_listener.cpp  command_publisher2.cpp  command_publisher3.cpp  control_pos.py  end_effector_position_node.cpp  gui.py  joint_state_pub.cpp  joints_info.py  position_control.cpp  position_control_gui.py  reset_position.cpp  robot_info.cpp  robot_info_controller.cpp  test.py  test_plugin.cpp
src/test_package/: CMakeLists.txt  package.xml
src/test_package/src/: my_box_ign_plugin.cpp  my_box_plugin.cpp  robot_movement_plugin.cpp
(+536 files in other folders)
